Include null value fields in the generated json, controlled by the generateNullValueToJson flag

--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -232,7 +232,9 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
       {{/isDate}}
       {{/isDateTime}}
         {{^isNullable}}
-    }
+    } {{#vendorExtensions.generateNullValuesToJson}}else {
+          json[r'{{baseName}}'] = null;
+    }{{/vendorExtensions.generateNullValuesToJson}}
         {{/isNullable}}
       {{/vendorExtensions.x-dart-inherited}}
     {{/vars}}
