--- a/src/main/resources/dart2-v3template/_array_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_array_from_json.mustache
@@ -10,6 +10,7 @@
       {{enumName}}Extension.listFromJson(data)
     {{/isEnum}}
     {{#isDateTime}}
+      openApiDateTimeList(data)
     {{/isDateTime}}
     {{#isDate}}
       openApiDateTimeList(data)
