--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -85,7 +85,7 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
           json[r'{{baseName}}'] = {{{complexType}}}.toJson({{{name}}});
         {{/isModel}}
         {{#isPrimitiveType}}
-
+          json[r'{{baseName}}'] = {{{name}}};
         {{/isPrimitiveType}}
       {{/items}}
       {{^isNullable}}
@@ -156,6 +156,7 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
 
   {{#hasVars}}
     {{#vars}}{{^vendorExtensions.x-dart-inherited}}
+      hashCode = hashCode ^ '{{{name}}}'.hashCode; // avoid order issues
     {{#complexType}}
       {{#isArray}}
         hashCode = hashCode ^ const ListEquality().hash({{{name}}});
