encoding and decoding generating without complaint
- need correctness checks
- need to deal with extra "inner" types in
serialisers

--- a/src/main/resources/dart2-v3template/_array_copy.mustache
+++ b/src/main/resources/dart2-v3template/_array_copy.mustache
@@ -19,7 +19,7 @@
      (data as List<{{complexType}}>).map((data) => data.copyWith()).toList()
     {{/isModel}}
     {{#isPrimitiveType}}
-      (data as List<{{{dataType}}}).toList()
+      (data as List<{{{dataType}}}>).toList()
     {{/isPrimitiveType}}
   {{/items}}
 {{/items}}
