--- a/src/main/resources/dart2-v3template/_array_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_array_from_json.mustache
@@ -19,7 +19,7 @@
       {{complexType}}.listFromJson(data)
     {{/isModel}}
     {{#isPrimitiveType}}
-      (data as List)?.cast<List<{{{dataType}}}>>()
+      data?.cast<List<{{{dataType}}}>>()
     {{/isPrimitiveType}}
   {{/items}}
 {{/items}}
