--- a/src/main/resources/dart2-v3template/_map_copy.mustache
+++ b/src/main/resources/dart2-v3template/_map_copy.mustache
@@ -7,16 +7,16 @@
   {{/isArray}}
   {{^items}}
     {{#isEnum}}
-      (data as Map).cast<String, dynamic>().map((String key, {{{enumName}}} data) => MapEntry<String, {{{enumName}}}>(key, {{>_copy}} ))
+      (data as Map).cast<String, {{{enumName}}}>().map((String key, {{{enumName}}} data) => MapEntry<String, {{{enumName}}}>(key, {{>_copy}} ))
     {{/isEnum}}
     {{#isDateTime}}
-      (data as Map).cast<String, dynamic>().map((String key, {{{complexType}}} data) => MapEntry<String, {{{complexType}}}>(key, {{>_copy}} ))
+      (data as Map).cast<String, {{{complexType}}}>().map((String key, {{{complexType}}} data) => MapEntry<String, {{{complexType}}}>(key, {{>_copy}} ))
     {{/isDateTime}}
     {{#isDate}}
-      (data as Map).cast<String, dynamic>().map((String key, {{{complexType}}} data) => MapEntry<String, {{{complexType}}}>(key, {{>_copy}} ))
+      (data as Map).cast<String, {{{complexType}}}>().map((String key, {{{complexType}}} data) => MapEntry<String, {{{complexType}}}>(key, {{>_copy}} ))
     {{/isDate}}
     {{#isModel}}
-      (data as Map).cast<String, dynamic>().map((String key, {{{complexType}}} data) => MapEntry<String, {{{complexType}}}>(key, {{>_copy}} ))
+      (data as Map).cast<String, {{{complexType}}}>().map((String key, {{{complexType}}} data) => MapEntry<String, {{{complexType}}}>(key, {{>_copy}} ))
     {{/isModel}}
     {{#isPrimitiveType}}
       (data as Map).cast<String, {{{dataType}}}>().map((String key, {{{dataType}}} data) => MapEntry<String, {{{dataType}}}>(key, data))
