--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -82,7 +82,7 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
           json[r'{{baseName}}'] = {{{name}}}.toJson();
         {{/isEnum}}
         {{#isModel}}
-          json[r'{{baseName}}'] = {{{complexType}}}.toJson({{{name}}});
+          json[r'{{baseName}}'] = {{{name}}}.toJson();
         {{/isModel}}
         {{#isPrimitiveType}}
           json[r'{{baseName}}'] = {{{name}}};
@@ -187,39 +187,7 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
 
   {{classname}} copyWith({{#hasVars}}{
      {{#vars}}
-       {{#isArray}}
-         List<
-       {{/isArray}}
-       {{#isMap}}
-         Map<String,
-       {{/isMap}}
-       {{^vendorExtensions.x-dart-inherited}}
-         {{^complexType}}
-           {{#allowableValues}}
-             {{^min}}
-               {{classname}}{{nameInCamelCase}}Enum
-             {{/min}}
-             {{#min}}
-               {{{dataType}}}
-             {{/min}}
-           {{/allowableValues}}
-           {{^allowableValues}}
-             {{{dataType}}}
-           {{/allowableValues}}
-         {{/complexType}}
-         {{#complexType}}
-           {{{dataType}}}
-         {{/complexType}}
-       {{/vendorExtensions.x-dart-inherited}}
-       {{#vendorExtensions.x-dart-inherited}}
-         {{{dataType}}}
-       {{/vendorExtensions.x-dart-inherited}}
-       {{#isArray}}
-         >
-       {{/isArray}}
-       {{#isMap}}
-         >
-       {{/isMap}}  {{{name}}},
+         {{{dataType}}} {{{name}}},
      {{/vars}}
     }{{/hasVars}}) {
     {{classname}} copy = {{classname}}();
@@ -255,13 +223,10 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
             String toJson() => toMap[this];
             static {{{enumName}}} fromJson(String key) => key == null ? null : fromMap[key];
 
-            static List<{{{enumName}}}> listFromJson(List<dynamic> json) {
-              return json == null ? <{{{enumName}}}>[] : json.map((value) => fromJson(value)).toList();
-            }
+            static List<{{{enumName}}}> listFromJson(List<dynamic> json) =>
+              json == null ? <{{{enumName}}}>[] : json.map((value) => fromJson(value)).toList();
 
-            static {{{enumName}}} copyWith({{{enumName}}} instance) {
-              return instance;
-            }
+            static {{{enumName}}} copyWith({{{enumName}}} instance) => instance;
           }
         {{/allowableValues}}
       {{/min}}
