minor update fixes to copy

--- a/src/main/resources/dart2-v3template/_simple_copy.mustache
+++ b/src/main/resources/dart2-v3template/_simple_copy.mustache
@@ -1,11 +1,11 @@
 {{#isEnum}}
-  this.{{{name}}}
+  {{{name}}}
 {{/isEnum}}
 {{#isDateTime}}
- {{{name}}} == null ? {{{name}}}.add(Duration())
+ {{{name}}}
 {{/isDateTime}}
 {{#isDate}}
- {{{name}}} == null ? {{{name}}}.add(Duration())
+ {{{name}}}
 {{/isDate}}
 {{#isModel}}
   {{{name}}}?.copyWith()
